<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:background="@drawable/cropped"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView24"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/fog"
            tools:layout_editor_absoluteX="120dp"
            tools:layout_editor_absoluteY="12dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_marginStart="28dp"
            android:src="@drawable/monkey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nickname_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="90dp"
            android:fontFamily="@font/blinker_extralight"
            android:text="@string/nickname"
            android:textColor="#D7C9DC"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="90dp"
            android:fontFamily="@font/blinker_extralight"
            android:text="@string/default_username"
            android:textColor="#D7C9DC"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/nickname_field"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/nickname_edit"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/blinker_extralight"
            android:hint="@string/username"
            android:inputType="text"
            android:textColor="#D7C9DC"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/nickname_field"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/birth_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/blinker_extralight"
            android:text="@string/date_of_birth"
            android:textColor="#D7C9DC"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/nickname_field"
            app:layout_constraintTop_toBottomOf="@+id/nickname_field" />

        <TextView
            android:id="@+id/birth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/blinker_extralight"
            android:text="@string/default_date"
            android:textColor="#D7C9DC"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/birth_field"
            app:layout_constraintTop_toBottomOf="@+id/nickname" />

        <EditText
            android:id="@+id/birth_edit"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:fontFamily="@font/blinker_extralight"
            android:hint="@string/yyyy_mm_dd"
            android:inputType="date"
            android:textColor="#D7C9DC"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/birth_field"
            app:layout_constraintTop_toBottomOf="@+id/nickname" />

        <TextView
            android:id="@+id/login_date_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/blinker_extralight"
            android:text="@string/date_of_first_login"
            android:textColor="#D7C9DC"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/birth_field"
            app:layout_constraintTop_toBottomOf="@+id/birth_field" />

        <TextView
            android:id="@+id/login_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/blinker_extralight"
            android:text="@string/default_date"
            android:textColor="#D7C9DC"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/login_date_field"
            app:layout_constraintTop_toBottomOf="@+id/birth" />

        <ImageView
            android:id="@+id/button_edit"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="#00805779"
            android:src="@drawable/button_custom_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/cinzel"
            android:text="@string/save_button"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="#00FFFFFF"
            android:src="@drawable/button_custom_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView23"
            android:layout_width="200dp"
            android:layout_height="145dp"
            android:layout_marginEnd="280dp"
            android:layout_marginBottom="15dp"
            android:src="@drawable/cloud"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageButton
            android:id="@+id/button_change_photo"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_marginStart="28dp"
            android:background="#92FFFFFF"
            android:src="@android:drawable/ic_menu_camera"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#39365A"
        app:tabIndicatorColor="@color/md_theme_dark_tertiary"
        app:tabIndicatorHeight="4dp"
        app:tabMode="scrollable" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#221E3E">

        <ImageView
            android:id="@+id/image_faded"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_marginTop="270dp"
            android:src="@drawable/faded"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>